@@ -8,6 +8,7 @@ CHANGELOG
 * clear TTL and timestamp off models after persisting to DB
 * allows UUID without - (Thanks to Michael Haddad, github.com/mahall)
 * fixes regarding syncing schema settings (thanks Kai Lautaportti github.com/dokai)
+* allow acces to instance columns as if it is a dict
 
 0.10.0
 
